include_HEADERS=aml.h

include_aml_areadir=$(includedir)/aml/area
include_aml_area_HEADERS = \
			      aml/area/linux.h

include_aml_dmadir=$(includedir)/aml/dma
include_aml_dma_HEADERS = \
			      aml/dma/linux-seq.h \
			      aml/dma/linux-par.h

include_aml_scratchdir=$(includedir)/aml/scratch
include_aml_scratch_HEADERS = \
			      aml/scratch/seq.h \
			      aml/scratch/par.h

include_aml_tilingdir=$(includedir)/aml/tiling
include_aml_tiling_HEADERS = \
			      aml/tiling/1d.h \
			      aml/tiling/2d.h


include_amlutilsdir=$(includedir)/aml/utils
include_amlutils_HEADERS = \
			   aml/utils/vector.h \
			   aml/utils/bitmap.h \
			   aml/utils/version.h \
			   aml/utils/error.h

