include_HEADERS=aml.h

include_aml_areadir=$(includedir)/aml/area
include_aml_area_HEADERS = \
			      aml/area/linux.h \
			      aml/area/cuda.h

include_aml_layoutdir=$(includedir)/aml/layout
include_aml_layout_HEADERS = \
			      aml/layout/native.h \
			      aml/layout/dense.h \
			      aml/layout/reshape.h

include_aml_dmadir=$(includedir)/aml/dma
include_aml_dma_HEADERS = \
			      aml/dma/linux-seq.h \
			      aml/dma/linux-par.h

include_aml_scratchdir=$(includedir)/aml/scratch
include_aml_scratch_HEADERS = \
			      aml/scratch/seq.h \
			      aml/scratch/par.h

include_aml_tilingdir=$(includedir)/aml/tiling
include_aml_tiling_HEADERS = \
			     aml/tiling/native.h \
			     aml/tiling/pad.h \
			     aml/tiling/resize.h


include_amlutilsdir=$(includedir)/aml/utils
include_amlutils_HEADERS = \
			   aml/utils/bitmap.h \
			   aml/utils/error.h \
			   aml/utils/inner-malloc.h \
			   aml/utils/vector.h \
			   aml/utils/version.h \
			   aml/utils/features.h

